--- a/neumorphic_calculator/calc.html
+++ b/neumorphic_calculator/calc.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Nuemorphic Calculator</title>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<main>
@@ -30,5 +31,6 @@
 				<button class="op_key">=</button>
 			</div>
 		</main>
+		<script src="script.js"></script>
 	</body>
 </html>
