update calc structure

--- a/neumorphic_calculator/calc.html
+++ b/neumorphic_calculator/calc.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Nuemorphic Calculator</title>
+		<title>Neumorphic Calculator</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<main>
-			<input type="number" value="0" />
+			<h2>Neumorphic Calculator</h2>
+			<input type="text" value="0" />
 			<div class="keys">
 				<button class="op__key">C</button>
 				<button class="op__key">+/-</button>
@@ -27,6 +28,7 @@
 				<button class="num_key">9</button>
 				<button class="op_key">+</button>
 				<button class="num_key">0</button>
+				<button class="num_key">00</button>
 				<button class="num_key">.</button>
 				<button class="op_key">=</button>
 			</div>
