add additional class name for each key

--- a/neumorphic_calculator/calc.html
+++ b/neumorphic_calculator/calc.html
@@ -11,26 +11,26 @@
 			<h2>Neumorphic Calculator</h2>
 			<input type="text" value="0" />
 			<div class="keys">
-				<button class="op__key">C</button>
-				<button class="op__key">+/-</button>
-				<button class="op__key">%</button>
-				<button class="op__key">/</button>
-				<button class="num_key">1</button>
-				<button class="num_key">2</button>
-				<button class="num_key">3</button>
-				<button class="op_key">x</button>
-				<button class="num_key">4</button>
-				<button class="num_key">5</button>
-				<button class="num_key">6</button>
-				<button class="op_key">-</button>
-				<button class="num_key">7</button>
-				<button class="num_key">8</button>
-				<button class="num_key">9</button>
-				<button class="op_key">+</button>
-				<button class="num_key">0</button>
-				<button class="num_key">00</button>
-				<button class="num_key">.</button>
-				<button class="op_key">=</button>
+				<button class="op__key clear">C</button>
+				<button class="op__key negate">+/-</button>
+				<button class="op__key module">%</button>
+				<button class="op__key devide">/</button>
+				<button class="num_key one">1</button>
+				<button class="num_key two">2</button>
+				<button class="num_key three">3</button>
+				<button class="op_key times">x</button>
+				<button class="num_key four">4</button>
+				<button class="num_key five">5</button>
+				<button class="num_key six">6</button>
+				<button class="op_key minus">-</button>
+				<button class="num_key seven">7</button>
+				<button class="num_key eight">8</button>
+				<button class="num_key nine">9</button>
+				<button class="op_key plus">+</button>
+				<button class="num_key zero">0</button>
+				<button class="num_key zero-zero">00</button>
+				<button class="num_key dot">.</button>
+				<button class="op_key equal">=</button>
 			</div>
 		</main>
 		<script src="script.js"></script>
