make input type number and remove number counter

--- a/neumorphic_calculator/calc.html
+++ b/neumorphic_calculator/calc.html
@@ -9,7 +9,7 @@
 	<body>
 		<main>
 			<h2>Neumorphic Calculator</h2>
-			<input type="text" value="0" />
+			<input type="number" value="0" class="input" />
 			<div class="keys">
 				<button class="op__key clear">C</button>
 				<button class="op__key negate">+/-</button>
