--- a/whereAmI/index.html
+++ b/whereAmI/index.html
@@ -9,8 +9,12 @@
 	<body>
 		<main>
 			<p class="title">Actually You know where you are, but in case you ...</p>
-			<p class="teller">You Are In <span class="place">...</span></p>
-			<button>Where Am I?</button>
+			<div class="teller">
+				<p>You Are In <span class="place">...</span></p>
+				<button class="more-btn hidden">more</button>
+				<p class="more"></p>
+			</div>
+			<button class="ask-btn">Where Am I?</button>
 		</main>
 		<script src="script.js"></script>
 	</body>
