--- a/whereAmI/index.html
+++ b/whereAmI/index.html
@@ -9,9 +9,9 @@
 	<body>
 		<main>
 			<p class="title">Actually You know where you are, but in case you ...</p>
-			<div class="teller">
-				<p>You Are In <span class="place">...</span></p>
-				<button class="more-btn hidden">more</button>
+			<div class="teller" id="teller">
+				<p class="result">You Are In <span class="place">...</span></p>
+				<button class="more-btn hidden" id="moreBtn">more</button>
 				<p class="more"></p>
 			</div>
 			<button class="ask-btn">Where Am I?</button>
